--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.ts",
     "scripts": {
-        "clean": "rm dist/bundle.js",
+        "clean": "rm dist/*",
         "start": "parcel src/index.html",
         "build-prod": "parcel build src/index.html",
         "format": "yarn prettier --write ."
